# kuromoji-rs

./: Cargo.toml  README.md
benches/: bench.rs
dict/: dict.fst  dict.vals
src/: build_cost.rs  build_fst.rs  character_definition.rs  connection.rs  dict.rs  lib.rs  prefix_dict.rs  unknown_dictionary.rs  viterbi.rs  word_entry.rs
