[package]
name = "kuromoji"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
edition = "2018"

[dependencies]
tantivy-fst = "0.1"
byteorder = "1.2"
encoding = "0.2"


[dev-dependencies]
criterion = "0.2"


[profile.release]
debug = true
lto = true

[[bin]]
name = "build-fst"
path = "bin/build_fst.rs"

[[bin]]
name = "flamegraph"
path = "bin/flamegraph.rs"


    #[[bin]]
    #name = "build-cost"
    #path = "bin/build_cost.rs"

[[bin]]
name = "build-char-definition"
path = "bin/build_char_definition.rs"

[[bench]]
name = "bench"
harness = false

